fix: adjust spacing between filter and result text

--- a/common/components/Button/Button.module.scss
+++ b/common/components/Button/Button.module.scss
@@ -79,6 +79,7 @@
   background: none;
   border: none;
   border-radius: 0.25rem;
+  color: $black;
   outline-offset: 2px;
   padding: 0rem;
   text-decoration: underline;
